--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@
   width: 50%;
   background-color: transparent;
   border: none;
-  color: white;
+  color: #66707D;
   outline: none;
   border-bottom: 1px solid #445366;
   font-size: 1em;
